[package]
name = "vulkan_game_ex"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.12"
bevy_rapier3d = "0.24"
glam = "0.25"
winit = "0.29"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
wgpu = "0.17"
ash = "0.37"
gpu-allocator = "0.22"
